feat: Add an image to the react post

--- a/content/posts/2023-12-27-react.md
+++ b/content/posts/2023-12-27-react.md
@@ -6,6 +6,8 @@ draft = false
 tags = ['React', 'JavaScript', 'Web Development']
 +++
 
+![react](https://github.com/gaviral/avi/blob/main/static/images/react.png?raw=true)
+
 ## React Component Essentials
 
 - **Definition**: React's fundamental building block.
