--- a/content/posts/2023-12-27-react.md
+++ b/content/posts/2023-12-27-react.md
@@ -4,6 +4,7 @@ date = 2023-12-27
 lastmod = 2023-12-28
 draft = false
 tags = ['React', 'JavaScript', 'Web Development']
+categories = ['Frontend Development']
 +++
 
 ![react](https://github.com/gaviral/avi/blob/main/static/images/react.png?raw=true)
