Update draft status for blog posts

--- a/content/posts/2023-12-28-pillars.md
+++ b/content/posts/2023-12-28-pillars.md
@@ -1,7 +1,7 @@
 +++
 title = 'Pillars - Work in Progress'
 date = 2023-12-28
-draft = false
+draft = true
 +++
 
 ![pillars](https://github.com/gaviral/avi/blob/main/static/images/pillars.png?raw=true)
