refator: Update post titles and remove unnecessary headings

--- a/content/posts/2024-01-05_BYOBlog.md
+++ b/content/posts/2024-01-05_BYOBlog.md
@@ -1,11 +1,9 @@
 +++
-title = 'BYOBlog'
+title = 'Bring Your Own Blog'
 date = 2024-01-05
 draft = false
 tags = ['blog', 'hugo', 'github']
 +++
-
-# Bring Your Own Blog
 
 1. Create a new repo on GitHub.
 2. Follow this: https://github.com/adityatelange/hugo-PaperMod/wiki/Installation (use method 2 for simplicity).
