--- a/content/posts/2023-12-27-react.md
+++ b/content/posts/2023-12-27-react.md
@@ -2,7 +2,7 @@
 title = 'React - Work In Progress'
 date = 2023-12-27
 lastmod = 2023-12-28
-draft = false
+draft = true
 tags = ['React', 'JavaScript', 'Web Development']
 categories = ['Frontend Development']
 +++
